--- a/project-introduction/index.html
+++ b/project-introduction/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qr Code Componets | Frontend Mentor</title>
+    <title>Frontend Mentor | Qr Code Componets</title>
   </head>
   <body>
     <div id="root"></div>
