--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Social Link Profile | Frontend Mentor</title>
+    <title>Frontend Mentor | Social Link Profile</title>
   </head>
   <body>
     <div id="root"></div>
